--- a/index.html
+++ b/index.html
@@ -28,28 +28,92 @@
 					</span>
 				</button>
 				<ul class="d-flex nav-icons">
-					<li class="ms-3 pt-1"><a href="#">
+					<li class="ms-3 pt-1">
+						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-heart" viewBox="0 0 16 16">
 								<path
 									d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
 							</svg>
-						</a></li>
-					<li class="ms-3 pt-1"><a href="#">
+						</button>
+						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+							aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="exampleModalLabel">Вам понравились</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal"
+											aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										...
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-modal">В корзину</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="ms-3 pt-1">
+						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myBasket">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-bag" viewBox="0 0 16 16">
 								<path
 									d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
 							</svg>
-						</a></li>
-					<li class="ms-3 pt-1"><a href="#">
+						</button>
+						<div class="modal fade" id="myBasket" tabindex="-1" aria-labelledby="exampleModalLabel"
+							aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="exampleModalLabel">Корзина</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal"
+											aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										<ul>
+											<li></li>
+										</ul>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-modal">Купить</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="ms-3 pt-1">
+						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#singIn">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-door-closed" viewBox="0 0 16 16">
 								<path
 									d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z" />
 								<path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z" />
 							</svg>
-						</a></li>
+						</button>
+						<div class="modal fade" id="singIn" tabindex="-1" aria-labelledby="exampleModalLabel"
+							aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="exampleModalLabel">Вход</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal"
+											aria-label="Close"></button>
+									</div>
+									<div class="modal-body modal-sing-in">
+									<input type="tel" placeholder="Ваш номер телефона" tabindex="1">
+									<input type="password" placeholder="Ваш пароль" tabindex="2">
+									<p>Если у вас еще нет аккаунта нажмите <a href="#">здесь</a></p>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-modal">Войти</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
 				</ul>
 				<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
 					<div class="accordion" id="accordionPanelsStayOpenExample">
