--- a/index.html
+++ b/index.html
@@ -384,8 +384,7 @@
 									<label for="thirdProduct">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="thirdProduct"></label>
-									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
@@ -418,8 +417,7 @@
 									<label for="fourthProduct">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="fourthProduct"></label>
-									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
@@ -452,8 +450,7 @@
 									<label for="firstProduct">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="firstProduct"></label>
-									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
@@ -493,8 +490,7 @@
 									<label for="secondProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="secondProductNovelties"></label>
-									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
@@ -506,20 +502,20 @@
 								<a href="#"><img src="image/bestsellers/scisors.png" alt="scisors"></a>
 							</div>
 							<div class="rating-area d-block m-auto">
-								<input type="radio" id="star-5-2" name="rating" value="5n">
-								<label for="star-5-2" title="Оценка «5»"></label>
+								<input type="radio" id="novelties-5-2" name="rating" value="5n">
+								<label for="novelties-5-2" title="Оценка «5»"></label>
 
-								<input type="radio" id="star-4-2" name="rating" value="4n">
-								<label for="star-4-2" title="Оценка «4»"></label>
+								<input type="radio" id="novelties-4-2" name="rating" value="4n">
+								<label for="novelties-4-2" title="Оценка «4»"></label>
 
-								<input type="radio" id="star-3-2" name="rating" value="3n">
-								<label for="star-3-2" title="Оценка «3»"></label>
+								<input type="radio" id="novelties-3-2" name="rating" value="3n">
+								<label for="novelties-3-2" title="Оценка «3»"></label>
 
-								<input type="radio" id="star-2-2" name="rating" value="2n">
-								<label for="star-2-2" title="Оценка «2»"></label>
+								<input type="radio" id="novelties-2-2" name="rating" value="2n">
+								<label for="novelties-2-2" title="Оценка «2»"></label>
 
-								<input type="radio" id="star-1-2" name="rating" value="1n">
-								<label for="star-1-2" title="Оценка «1»"></label>
+								<input type="radio" id="novelties-1-2" name="rating" value="1n">
+								<label for="novelties-1-2" title="Оценка «1»"></label>
 							</div>
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
@@ -527,8 +523,7 @@
 									<label for="thirdProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="thirdProductNovelties"></label>
-									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
@@ -540,20 +535,20 @@
 								<a href="#"><img src="image/bestsellers/wax.png" alt="wax"></a>
 							</div>
 							<div class="rating-area d-block m-auto">
-								<input type="radio" id="star-5-3" name="rating" value="5">
-								<label for="star-5-3" title="Оценка «5»"></label>
+								<input type="radio" id="novelties-5-3" name="rating" value="5">
+								<label for="novelties-5-3" title="Оценка «5»"></label>
 
-								<input type="radio" id="star-4-3" name="rating" value="4">
-								<label for="star-4-3" title="Оценка «4»"></label>
+								<input type="radio" id="novelties-4-3" name="rating" value="4">
+								<label for="novelties-4-3" title="Оценка «4»"></label>
 
-								<input type="radio" id="star-3-3" name="rating" value="3">
-								<label for="star-3-3" title="Оценка «3»"></label>
+								<input type="radio" id="novelties-3-3" name="rating" value="3">
+								<label for="novelties-3-3" title="Оценка «3»"></label>
 
-								<input type="radio" id="star-2-3" name="rating" value="2">
-								<label for="star-2-3" title="Оценка «2»"></label>
+								<input type="radio" id="novelties-2-3" name="rating" value="2">
+								<label for="novelties-2-3" title="Оценка «2»"></label>
 
-								<input type="radio" id="star-1-3" name="rating" value="1">
-								<label for="star-1-3" title="Оценка «1»"></label>
+								<input type="radio" id="novelties-1-3" name="rating" value="1">
+								<label for="novelties-2-3" title="Оценка «1»"></label>
 							</div>
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
@@ -561,8 +556,7 @@
 									<label for="fourthProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="fourthProductNovelties"></label>
-									<button href="#" class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
@@ -574,20 +568,20 @@
 								<a href="#"><img src="image/bestsellers/sterilizer.png" alt="sterilizer"></a>
 							</div>
 							<div class="rating-area d-block m-auto">
-								<input type="radio" id="star-5-4" name="rating" value="5">
-								<label for="star-5-4" title="Оценка «5»"></label>
+								<input type="radio" id="novelties-5-4" name="rating" value="5">
+								<label for="novelties-5-4" title="Оценка «5»"></label>
 
-								<input type="radio" id="star-4-4" name="rating" value="4">
-								<label for="star-4-4" title="Оценка «4»"></label>
+								<input type="radio" id="novelties-4-4" name="rating" value="4">
+								<label for="novelties-4-4" title="Оценка «4»"></label>
 
-								<input type="radio" id="star-3-4" name="rating" value="3">
-								<label for="star-3-4" title="Оценка «3»"></label>
+								<input type="radio" id="novelties-3-4" name="rating" value="3">
+								<label for="novelties-3-4" title="Оценка «3»"></label>
 
-								<input type="radio" id="star-2-4" name="rating" value="2">
-								<label for="star-2-4" title="Оценка «2»"></label>
+								<input type="radio" id="novelties-2-4" name="rating" value="2">
+								<label for="novelties-2-4" title="Оценка «2»"></label>
 
-								<input type="radio" id="star-1-4" name="rating" value="1">
-								<label for="star-1-4" title="Оценка «1»"></label>
+								<input type="radio" id="novelties-1-4" name="rating" value="1">
+								<label for="novelties-1-4" title="Оценка «1»"></label>
 							</div>
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
@@ -595,8 +589,7 @@
 									<label for="firstProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
 											id="firstProductNovelties"></label>
-									<button href="#" class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
-										type="submit">купить</button>
+									<button class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn" type="submit">купить</button>
 								</form>
 							</div>
 						</div>
