--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,13 +11,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 	<div class="wrapper">
 		<header class="header">
 			<nav class="navbar navbar-expand-lg navbar-light fixed-top d-lg-none" aria-label="Tenth navbar example">
 				<div class="container-fluid d-flex">
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08"
+					<button class="navbar-toggler" id="mobile-menu-open" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08"
 						aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
 						<span>
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
@@ -208,6 +206,19 @@
 					</ul>
 				</div>
 			</nav>
+			<div class="mobile-header d-lg-none">
+				<div class="logo-mobile text-center">
+					<a href="#" class="text-decoration-none">
+						<span class="logo">мАСТЕР</span>
+						<span class="under-logo">Все для салонов красоты</span>
+					</a>
+				</div>
+				<form class="mobile-search input-group mb-3 ">
+					<input type="search" class="form-control" placeholder="Я ищу" aria-label="Recipient's username"
+						aria-describedby="button-addon3">
+					<button class="btn btn-outline-secondary search-btn" type="button" id="button-addon3"></button>
+				</form>
+			</div>
 			<div class="mt-3  pb-3 d-none d-lg-block">
 				<div class="container d-lg-flex flex-nowrap justify-content-between">
 					<div class="p-1 text-center text-lg-start mb-2 mb-lg-0">
@@ -251,19 +262,6 @@
 			</div>
 		</header>
 		<main class="main">
-			<div class="mobile-header d-lg-none">
-				<div class="logo-mobile text-center">
-					<a href="#" class="text-decoration-none">
-						<span class="logo">мАСТЕР</span>
-						<span class="under-logo">Все для салонов красоты</span>
-					</a>
-				</div>
-				<form class="mobile-search input-group mb-3 ">
-					<input type="search" class="form-control" placeholder="Я ищу" aria-label="Recipient's username"
-						aria-describedby="button-addon3">
-					<button class="btn btn-outline-secondary search-btn" type="button" id="button-addon3"></button>
-				</form>
-			</div>
 			<div class="banner" style="background-image: url('image/banner/banner_main.jpg');">
 				<div class="container">
 					<div class="text-end banner-content">
@@ -325,9 +323,9 @@
 			<div class="bestseller mt-5 pt-5">
 				<div class="container">
 					<h3 class="text-center mb-5"><span>Хиты продаж</span></h3>
-					<div class="d-lg-flex justify-content-between slider-slick">
-						<div class="wrapper-card me-1">
-							<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
+					<div class="slider-slick">
+						<div class="wrapper-card">
+							<div class="card px-3 py-2 mt-2 py-lg-4 me-1 me-lg-3">
 								<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 										"DELICA"</a>
 								</h4>
@@ -361,8 +359,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="wrapper-card me-1">
-							<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
+						<div class="wrapper-card">
+							<div class="card px-3 py-2 mt-2 py-lg-4 me-1 me-lg-3">
 								<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 										"DELICA"</a>
 								</h4>
@@ -396,8 +394,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="wrapper-card me-1"> 
-							<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
+						<div class="wrapper-card"> 
+							<div class="card px-3 py-2 mt-2 py-lg-4 me-1 me-lg-3">
 								<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 										"DELICA"</a>
 								</h4>
@@ -472,9 +470,9 @@
 			<div class="novelties mt-5 py-5">
 				<div class="container">
 					<h3 class="text-center mb-5 novelties-title"><span>Новинки</span></h3>
-					<div class="d-lg-flex justify-content-between slider-slick">
-						<div  class="wrapper-card me-1">
-							<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
+					<div class=" slider-slick">
+						<div  class="wrapper-card">
+							<div class="card px-3 py-2 mt-2 py-lg-4 me-1 me-lg-3">
 								<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 										"DELICA"</a>
 								</h4>
@@ -508,8 +506,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="wrapper-card me-1">
-							<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
+						<div class="wrapper-card">
+							<div class="card px-3 py-2 mt-2 py-lg-4 me-1 me-lg-3">
 								<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 										"DELICA"</a>
 								</h4>
@@ -543,8 +541,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="wrapper-card me-1">
-							<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
+						<div class="wrapper-card">
+							<div class="card px-3 py-2 mt-2 py-lg-4 me-1 me-lg-3">
 								<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 										"DELICA"</a>
 								</h4>
@@ -737,9 +735,9 @@
 				</div>
 			</div>
 		</main>
-		<footer class="footer ">
-			<div class="container d-none d-lg-flex justify-content-between py-5 footer-top">
-				<div>
+		<footer class="footer">
+			<div class="container d-flex justify-content-between justify-content-md-around justify-content-lg-between py-5 footer-top">
+				<div class="d-none d-lg-block">
 					<h5><span>Каталог Товаров</span></h5>
 					<ul class="p-0">
 						<li><a href="#">Маникюр и педикюр</a></li>
@@ -751,7 +749,7 @@
 						<li><a href="#">Оборудование</a></li>
 					</ul>
 				</div>
-				<div>
+				<div class="d-none d-lg-block">
 					<h5><span>Покупателям</span></h5>
 					<ul class="p-0">
 						<li><a href="#">Доставка и опалата</a></li>
